src/lang/wlp3Parser.ts
// Generated from ./src/lang/wlp3.g4 by ANTLR 4.9.0-SNAPSHOT

import { ATN } from 'antlr4ts/atn/ATN'
import { ATNDeserializer } from 'antlr4ts/atn/ATNDeserializer'
import { ParserATNSimulator } from 'antlr4ts/atn/ParserATNSimulator'
import { NotNull } from 'antlr4ts/Decorators'
import { Override } from 'antlr4ts/Decorators'
import { FailedPredicateException } from 'antlr4ts/FailedPredicateException'
import * as Utils from 'antlr4ts/misc/Utils'
import { NoViableAltException } from 'antlr4ts/NoViableAltException'
import { Parser } from 'antlr4ts/Parser'
import { ParserRuleContext } from 'antlr4ts/ParserRuleContext'
import { RecognitionException } from 'antlr4ts/RecognitionException'
import { RuleContext } from 'antlr4ts/RuleContext'
import { Token } from 'antlr4ts/Token'
import { TokenStream } from 'antlr4ts/TokenStream'
import { ParseTreeListener } from 'antlr4ts/tree/ParseTreeListener'
import { ParseTreeVisitor } from 'antlr4ts/tree/ParseTreeVisitor'
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from 'antlr4ts/tree/TerminalNode'
import { Vocabulary } from 'antlr4ts/Vocabulary'
import { VocabularyImpl } from 'antlr4ts/VocabularyImpl'

import { wlp3Listener } from './wlp3Listener'
import { wlp3Visitor } from './wlp3Visitor'

export class wlp3Parser extends Parser {
    public static readonly T__0 = 1
    public static readonly T__1 = 2
    public static readonly T__2 = 3
    public static readonly T__3 = 4
    public static readonly T__4 = 5
    public static readonly T__5 = 6
    public static readonly T__6 = 7
    public static readonly T__7 = 8
    public static readonly T__8 = 9
    public static readonly T__9 = 10
    public static readonly T__10 = 11
    public static readonly T__11 = 12
    public static readonly T__12 = 13
    public static readonly T__13 = 14
    public static readonly T__14 = 15
    public static readonly T__15 = 16
    public static readonly T__16 = 17
    public static readonly T__17 = 18
    public static readonly T__18 = 19
    public static readonly T__19 = 20
    public static readonly T__20 = 21
    public static readonly T__21 = 22
    public static readonly T__22 = 23
    public static readonly T__23 = 24
    public static readonly T__24 = 25
    public static readonly T__25 = 26
    public static readonly T__26 = 27
    public static readonly T__27 = 28
    public static readonly T__28 = 29
    public static readonly T__29 = 30
    public static readonly T__30 = 31
    public static readonly T__31 = 32
    public static readonly T__32 = 33
    public static readonly T__33 = 34
    public static readonly WS = 35
    public static readonly INT = 36
    public static readonly BOOL = 37
    public static readonly ID = 38
    public static readonly RULE_program = 0
    public static readonly RULE_main = 1
    public static readonly RULE_function = 2
    public static readonly RULE_block = 3
    public static readonly RULE_statementlist = 4
    public static readonly RULE_params = 5
    public static readonly RULE_paramlist = 6
    public static readonly RULE_dcl = 7
    public static readonly RULE_type = 8
    public static readonly RULE_expr = 9
    public static readonly RULE_statement = 10
    public static readonly RULE_args = 11
    public static readonly RULE_arglist = 12
    public static readonly RULE_binaryoperator = 13
    public static readonly RULE_binarylogical = 14
    public static readonly RULE_unaryoperator = 15
    public static readonly RULE_predicate = 16
    public static readonly RULE_lvalue = 17
    // tslint:disable:no-trailing-whitespace
    public static readonly ruleNames: string[] = [
        'program',
        'main',
        'function',
        'block',
        'statementlist',
        'params',
        'paramlist',
        'dcl',
        'type',
        'expr',
        'statement',
        'args',
        'arglist',
        'binaryoperator',
        'binarylogical',
        'unaryoperator',
        'predicate',
        'lvalue'
    ]

    private static readonly _LITERAL_NAMES: Array<string | undefined> = [
        undefined,
        "'int'",
        "'main'",
        "'('",
        "')'",
        "'{'",
        "'}'",
        "','",
        "'bool'",
        "'int*'",
        "'bool*'",
        "'malloc'",
        "'*'",
        "'&'",
        "'='",
        "';'",
        "'if'",
        "'else'",
        "'while'",
        "'printf'",
        "'return'",
        "'free'",
        "'+'",
        "'-'",
        "'/'",
        "'%'",
        "'=='",
        "'>'",
        "'<'",
        "'<='",
        "'>='",
        "'!='",
        "'&&'",
        "'||'",
        "'!'"
    ]
    private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        'WS',
        'INT',
        'BOOL',
        'ID'
    ]
    public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(
        wlp3Parser._LITERAL_NAMES,
        wlp3Parser._SYMBOLIC_NAMES,
        []
    )

    // @Override
    // @NotNull
    public get vocabulary(): Vocabulary {
        return wlp3Parser.VOCABULARY
    }
    // tslint:enable:no-trailing-whitespace

    // @Override
    public get grammarFileName(): string {
        return 'wlp3.g4'
    }

    // @Override
    public get ruleNames(): string[] {
        return wlp3Parser.ruleNames
    }

    // @Override
    public get serializedATN(): string {
        return wlp3Parser._serializedATN
    }

    protected createFailedPredicateException(
        predicate?: string,
        message?: string
    ): FailedPredicateException {
        return new FailedPredicateException(this, predicate, message)
    }

    constructor(input: TokenStream) {
        super(input)
        this._interp = new ParserATNSimulator(wlp3Parser._ATN, this)
    }
    // @RuleVersion(0)
    public program(): ProgramContext {
        let _localctx: ProgramContext = new ProgramContext(this._ctx, this.state)
        this.enterRule(_localctx, 0, wlp3Parser.RULE_program)
        try {
            this.state = 40
            this._errHandler.sync(this)
            switch (this.interpreter.adaptivePredict(this._input, 0, this._ctx)) {
                case 1:
                    _localctx = new FunProgContext(_localctx)
                    this.enterOuterAlt(_localctx, 1)
                    {
                        this.state = 36
                        ;(_localctx as FunProgContext)._fun = this.function()
                        this.state = 37
                        ;(_localctx as FunProgContext)._prog = this.program()
                    }
                    break

                case 2:
                    _localctx = new MainProgContext(_localctx)
                    this.enterOuterAlt(_localctx, 2)
                    {
                        this.state = 39
                        ;(_localctx as MainProgContext)._mn = this.main()
                    }
                    break
            }
        } catch (re) {
            if (re instanceof RecognitionException) {
                _localctx.exception = re
                this._errHandler.reportError(this, re)
                this._errHandler.recover(this, re)
            } else {
                throw re
            }
        } finally {
            this.exitRule()
        }
        return _localctx
    }
    // @RuleVersion(0)
    public main(): MainContext {
        const _localctx: MainContext = new MainContext(this._ctx, this.state)
        this.enterRule(_localctx, 2, wlp3Parser.RULE_main)
        try {
            this.enterOuterAlt(_localctx, 1)
            {
                this.state = 42
                this.match(wlp3Parser.T__0)
                this.state = 43
                this.match(wlp3Parser.T__1)
                this.state = 44
                this.match(wlp3Parser.T__2)
                this.state = 45
                this.match(wlp3Parser.T__3)
                this.state = 46
                _localctx._blk = this.block()
            }
        } catch (re) {
            if (re instanceof RecognitionException) {
                _localctx.exception = re
                this._errHandler.reportError(this, re)
                this._errHandler.recover(this, re)
            } else {
                throw re
            }
        } finally {
            this.exitRule()
        }
        return _localctx
    }
    // @RuleVersion(0)
    public function(): FunctionContext {
        const _localctx: FunctionContext = new FunctionContext(this._ctx, this.state)
        this.enterRule(_localctx, 4, wlp3Parser.RULE_function)
        try {
            this.enterOuterAlt(_localctx, 1)
            {
                this.state = 48
                _localctx._t = this.type()
                this.state = 49
                _localctx._id = this.match(wlp3Parser.ID)
                this.state = 50
                this.match(wlp3Parser.T__2)
                this.state = 51
                _localctx._prms = this.params()
                this.state = 52
                this.match(wlp3Parser.T__3)
                this.state = 53
                _localctx._blk = this.block()
            }
        } catch (re) {
            if (re instanceof RecognitionException) {
                _localctx.exception = re
                this._errHandler.reportError(this, re)
                this._errHandler.recover(this, re)
            } else {
                throw re
            }
        } finally {
            this.exitRule()
        }
        return _localctx
    }
    // @RuleVersion(0)
    public block(): BlockContext {
        const _localctx: BlockContext = new BlockContext(this._ctx, this.state)
        this.enterRule(_localctx, 6, wlp3Parser.RULE_block)
        try {
            this.enterOuterAlt(_localctx, 1)
            {
                this.state = 55
                this.match(wlp3Parser.T__4)
                this.state = 56
                _localctx._stmnts = this.statementlist()
                this.state = 57
                this.match(wlp3Parser.T__5)
            }
        } catch (re) {
            if (re instanceof RecognitionException) {
                _localctx.exception = re
                this._errHandler.reportError(this, re)
                this._errHandler.recover(this, re)
            } else {
                throw re
            }
        } finally {
            this.exitRule()
        }
        return _localctx
    }
    // @RuleVersion(0)
    public statementlist(): StatementlistContext {
        let _localctx: StatementlistContext = new StatementlistContext(this._ctx, this.state)
        this.enterRule(_localctx, 8, wlp3Parser.RULE_statementlist)
        try {
            this.state = 63
            this._errHandler.sync(this)
            switch (this._input.LA(1)) {
                case wlp3Parser.T__0:
                case wlp3Parser.T__2:
                case wlp3Parser.T__7:
                case wlp3Parser.T__8:
                case wlp3Parser.T__9:
                case wlp3Parser.T__10:
                case wlp3Parser.T__11:
                case wlp3Parser.T__12:
                case wlp3Parser.T__15:
                case wlp3Parser.T__17:
                case wlp3Parser.T__18:
                case wlp3Parser.T__19:
                case wlp3Parser.T__20:
                case wlp3Parser.T__33:
                case wlp3Parser.INT:
                case wlp3Parser.BOOL:
                case wlp3Parser.ID:
                    _localctx = new StatementListContext(_localctx)
                    this.enterOuterAlt(_localctx, 1)
                    {
                        this.state = 59
                        ;(_localctx as StatementListContext)._first = this.statement()
                        this.state = 60
                        ;(_localctx as StatementListContext)._rest = this.statementlist()
                    }
                    break
                case wlp3Parser.T__5:
                    _localctx = new StatementEmptyContext(_localctx)
                    this.enterOuterAlt(_localctx, 2)
                    // tslint:disable-next-line:no-empty
                    {
                    }
                    break
                default:
                    throw new NoViableAltException(this)
            }
        } catch (re) {
            if (re instanceof RecognitionException) {
                _localctx.exception = re
                this._errHandler.reportError(this, re)
                this._errHandler.recover(this, re)
            } else {
                throw re
            }
        } finally {
            this.exitRule()
        }
        return _localctx
    }
    // @RuleVersion(0)
    public params(): ParamsContext {
        let _localctx: ParamsContext = new ParamsContext(this._ctx, this.state)
        this.enterRule(_localctx, 10, wlp3Parser.RULE_params)
        try {
            this.state = 67
            this._errHandler.sync(this)
            switch (this._input.LA(1)) {
                case wlp3Parser.T__0:
                case wlp3Parser.T__7:
                case wlp3Parser.T__8:
                case wlp3Parser.T__9:
                    _localctx = new ParamsListContext(_localctx)
                    this.enterOuterAlt(_localctx, 1)
                    {
                        this.state = 65
                        ;(_localctx as ParamsListContext)._list = this.paramlist()
                    }
                    break
                case wlp3Parser.T__3:
                    _localctx = new ParamsEmptyContext(_localctx)
                    this.enterOuterAlt(_localctx, 2)
                    // tslint:disable-next-line:no-empty
                    {
                    }
                    break
                default:
                    throw new NoViableAltException(this)
            }
        } catch (re) {
            if (re instanceof RecognitionException) {
                _localctx.exception = re
                this._errHandler.reportError(this, re)
                this._errHandler.recover(this, re)
            } else {
                throw re
            }
        } finally {
            this.exitRule()
        }
        return _localctx
    }
    // @RuleVersion(0)
    public paramlist(): ParamlistContext {
        let _localctx: ParamlistContext = new ParamlistContext(this._ctx, this.state)
        this.enterRule(_localctx, 12, wlp3Parser.RULE_paramlist)
        try {
            this.state = 74
            this._errHandler.sync(this)
            switch (this.interpreter.adaptivePredict(this._input, 3, this._ctx)) {
                case 1:
                    _localctx = new SingleParamContext(_localctx)
                    this.enterOuterAlt(_localctx, 1)
                    {
                        this.state = 69
                        ;(_localctx as SingleParamContext)._first = this.dcl()
                    }
                    break

                case 2:
                    _localctx = new MultiParamContext(_localctx)
                    this.enterOuterAlt(_localctx, 2)
                    {
                        this.state = 70
                        ;(_localctx as MultiParamContext)._first = this.dcl()
                        this.state = 71
                        this.match(wlp3Parser.T__6)
                        this.state = 72
                        ;(_localctx as MultiParamContext)._rest = this.paramlist()
                    }
                    break
            }
        } catch (re) {
            if (re instanceof RecognitionException) {
                _localctx.exception = re
                this._errHandler.reportError(this, re)
                this._errHandler.recover(this, re)
            } else {
                throw re
            }
        } finally {
            this.exitRule()
        }
        return _localctx
    }
    // @RuleVersion(0)
    public dcl(): DclContext {
        const _localctx: DclContext = new DclContext(this._ctx, this.state)
        this.enterRule(_localctx, 14, wlp3Parser.RULE_dcl)
        try {
            this.enterOuterAlt(_localctx, 1)
            {
                this.state = 76
                _localctx._t = this.type()
                this.state = 77
                _localctx._id = this.match(wlp3Parser.ID)
            }
        } catch (re) {
            if (re instanceof RecognitionException) {
                _localctx.exception = re
                this._errHandler.reportError(this, re)
                this._errHandler.recover(this, re)
            } else {
                throw re
            }
        } finally {
            this.exitRule()
        }
        return _localctx
    }
    // @RuleVersion(0)
    public type(): TypeContext {
        let _localctx: TypeContext = new TypeContext(this._ctx, this.state)
        this.enterRule(_localctx, 16, wlp3Parser.RULE_type)
        try {
            this.state = 83
            this._errHandler.sync(this)
            switch (this._input.LA(1)) {
                case wlp3Parser.T__0:
                    _localctx = new IntTypeContext(_localctx)
                    this.enterOuterAlt(_localctx, 1)
                    {
                        this.state = 79
                        this.match(wlp3Parser.T__0)
                    }
                    break
                case wlp3Parser.T__7:
                    _localctx = new BoolTypeContext(_localctx)
                    this.enterOuterAlt(_localctx, 2)
                    {
                        this.state = 80
                        this.match(wlp3Parser.T__7)
                    }
                    break
                case wlp3Parser.T__8:
                    _localctx = new IntStarTypeContext(_localctx)
                    this.enterOuterAlt(_localctx, 3)
                    {
                        this.state = 81
                        this.match(wlp3Parser.T__8)
                    }
                    break
                case wlp3Parser.T__9:
                    _localctx = new BoolStarTypeContext(_localctx)
                    this.enterOuterAlt(_localctx, 4)
                    {
                        this.state = 82
                        this.match(wlp3Parser.T__9)
                    }
                    break
                default:
                    throw new NoViableAltException(this)
            }
        } catch (re) {
            if (re instanceof RecognitionException) {
                _localctx.exception = re
                this._errHandler.reportError(this, re)
                this._errHandler.recover(this, re)
            } else {
                throw re
            }
        } finally {
            this.exitRule()
        }
        return _localctx
    }

    public expr(): ExprContext
    public expr(_p: number): ExprContext
    // @RuleVersion(0)
    public expr(_p?: number): ExprContext {
        if (_p === undefined) {
            _p = 0
        }

        const _parentctx: ParserRuleContext = this._ctx
        const _parentState: number = this.state
        let _localctx: ExprContext = new ExprContext(this._ctx, _parentState)
        let _prevctx: ExprContext = _localctx
        const _startState: number = 18
        this.enterRecursionRule(_localctx, 18, wlp3Parser.RULE_expr, _p)
        try {
            let _alt: number
            this.enterOuterAlt(_localctx, 1)
            {
                this.state = 110
                this._errHandler.sync(this)
                switch (this.interpreter.adaptivePredict(this._input, 5, this._ctx)) {
                    case 1:
                        {
                            _localctx = new IntContext(_localctx)
                            this._ctx = _localctx
                            _prevctx = _localctx

                            this.state = 86
                            this.match(wlp3Parser.INT)
                        }
                        break

                    case 2:
                        {
                            _localctx = new BoolContext(_localctx)
                            this._ctx = _localctx
                            _prevctx = _localctx
                            this.state = 87
                            this.match(wlp3Parser.BOOL)
                        }
                        break

                    case 3:
                        {
                            _localctx = new ParenthesesContext(_localctx)
                            this._ctx = _localctx
                            _prevctx = _localctx
                            this.state = 88
                            this.match(wlp3Parser.T__2)
                            this.state = 89
                            ;(_localctx as ParenthesesContext)._inner = this.expr(0)
                            this.state = 90
                            this.match(wlp3Parser.T__3)
                        }
                        break

                    case 4:
                        {
                            _localctx = new UnopExprContext(_localctx)
                            this._ctx = _localctx
                            _prevctx = _localctx
                            this.state = 92
                            ;(_localctx as UnopExprContext)._unop = this.unaryoperator()
                            this.state = 93
                            ;(_localctx as UnopExprContext)._first = this.expr(8)
                        }
                        break

                    case 5:
                        {
                            _localctx = new IdExprContext(_localctx)
                            this._ctx = _localctx
                            _prevctx = _localctx
                            this.state = 95
                            ;(_localctx as IdExprContext)._id = this.match(wlp3Parser.ID)
                        }
                        break

                    case 6:
                        {
                            _localctx = new FnExprContext(_localctx)
                            this._ctx = _localctx
                            _prevctx = _localctx
                            this.state = 96
                            ;(_localctx as FnExprContext)._id = this.match(wlp3Parser.ID)
                            this.state = 97
                            this.match(wlp3Parser.T__2)
                            this.state = 98
                            ;(_localctx as FnExprContext)._arglst = this.args()
                            this.state = 99
                            this.match(wlp3Parser.T__3)
                        }
                        break

                    case 7:
                        {
                            _localctx = new MallocExprContext(_localctx)
                            this._ctx = _localctx
                            _prevctx = _localctx
                            this.state = 101
                            this.match(wlp3Parser.T__10)
                            this.state = 102
                            this.match(wlp3Parser.T__2)
                            this.state = 103
                            ;(_localctx as MallocExprContext)._first = this.expr(0)
                            this.state = 104
                            this.match(wlp3Parser.T__3)
                        }
                        break

                    case 8:
                        {
                            _localctx = new StarExprContext(_localctx)
                            this._ctx = _localctx
                            _prevctx = _localctx
                            this.state = 106
                            this.match(wlp3Parser.T__11)
                            this.state = 107
                            ;(_localctx as StarExprContext)._first = this.expr(2)
                        }
                        break

                    case 9:
                        {
                            _localctx = new AmpersandExprContext(_localctx)
                            this._ctx = _localctx
                            _prevctx = _localctx
                            this.state = 108
                            this.match(wlp3Parser.T__12)
                            this.state = 109
                            ;(_localctx as AmpersandExprContext)._first = this.lvalue()
                        }
                        break
                }
                this._ctx._stop = this._input.tryLT(-1)
                this.state = 122
                this._errHandler.sync(this)
                _alt = this.interpreter.adaptivePredict(this._input, 7, this._ctx)
                while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
                    if (_alt === 1) {
                        if (this._parseListeners != null) {
                            this.triggerExitRuleEvent()
                        }
                        _prevctx = _localctx
                        {
                            this.state = 120
                            this._errHandler.sync(this)
                            switch (this.interpreter.adaptivePredict(this._input, 6, this._ctx)) {
                                case 1:
                                    {
                                        _localctx = new BinopExprContext(
                                            new ExprContext(_parentctx, _parentState)
                                        )
                                        ;(_localctx as BinopExprContext)._first = _prevctx
                                        this.pushNewRecursionContext(
                                            _localctx,
                                            _startState,
                                            wlp3Parser.RULE_expr
                                        )
                                        this.state = 112
                                        if (!this.precpred(this._ctx, 7)) {
                                            throw this.createFailedPredicateException(
                                                'this.precpred(this._ctx, 7)'
                                            )
                                        }
                                        this.state = 113
                                        ;(_localctx as BinopExprContext)._binop =
                                            this.binaryoperator()
                                        this.state = 114
                                        ;(_localctx as BinopExprContext)._second = this.expr(8)
                                    }
                                    break

                                case 2:
                                    {
                                        _localctx = new BinlogExprContext(
                                            new ExprContext(_parentctx, _parentState)
                                        )
                                        ;(_localctx as BinlogExprContext)._first = _prevctx
                                        this.pushNewRecursionContext(
                                            _localctx,
                                            _startState,
                                            wlp3Parser.RULE_expr
                                        )
                                        this.state = 116
                                        if (!this.precpred(this._ctx, 6)) {
                                            throw this.createFailedPredicateException(
                                                'this.precpred(this._ctx, 6)'
                                            )
                                        }
                                        this.state = 117
                                        ;(_localctx as BinlogExprContext)._binlog =
                                            this.binarylogical()
                                        this.state = 118
                                        ;(_localctx as BinlogExprContext)._second = this.expr(7)
                                    }
                                    break
                            }
                        }
                    }
                    this.state = 124
                    this._errHandler.sync(this)
                    _alt = this.interpreter.adaptivePredict(this._input, 7, this._ctx)
                }
            }
        } catch (re) {
            if (re instanceof RecognitionException) {
                _localctx.exception = re
                this._errHandler.reportError(this, re)
                this._errHandler.recover(this, re)
            } else {
                throw re
            }
        } finally {
            this.unrollRecursionContexts(_parentctx)
        }
        return _localctx
    }
    // @RuleVersion(0)
    public statement(): StatementContext {
        let _localctx: StatementContext = new StatementContext(this._ctx, this.state)
        this.enterRule(_localctx, 20, wlp3Parser.RULE_statement)
        try {
            this.state = 171
            this._errHandler.sync(this)
            switch (this.interpreter.adaptivePredict(this._input, 8, this._ctx)) {
                case 1:
                    _localctx = new AssignmentContext(_localctx)
                    this.enterOuterAlt(_localctx, 1)
                    {
                        this.state = 125
                        ;(_localctx as AssignmentContext)._lv = this.lvalue()
                        this.state = 126
                        this.match(wlp3Parser.T__13)
                        this.state = 127
                        ;(_localctx as AssignmentContext)._val = this.expr(0)
                        this.state = 128
                        this.match(wlp3Parser.T__14)
                    }
                    break

                case 2:
                    _localctx = new IfStatementContext(_localctx)
                    this.enterOuterAlt(_localctx, 2)
                    {
                        this.state = 130
                        this.match(wlp3Parser.T__15)
                        this.state = 131
                        this.match(wlp3Parser.T__2)
                        this.state = 132
                        ;(_localctx as IfStatementContext)._pred = this.predicate()
                        this.state = 133
                        this.match(wlp3Parser.T__3)
                        this.state = 134
                        ;(_localctx as IfStatementContext)._cons = this.block()
                        this.state = 135
                        this.match(wlp3Parser.T__16)
                        this.state = 136
                        ;(_localctx as IfStatementContext)._alt = this.block()
                    }
                    break

                case 3:
                    _localctx = new WhileStatementContext(_localctx)
                    this.enterOuterAlt(_localctx, 3)
                    {
                        this.state = 138
                        this.match(wlp3Parser.T__17)
                        this.state = 139
                        this.match(wlp3Parser.T__2)
                        this.state = 140
                        ;(_localctx as WhileStatementContext)._pred = this.predicate()
                        this.state = 141
                        this.match(wlp3Parser.T__3)
                        this.state = 142
                        ;(_localctx as WhileStatementContext)._body = this.block()
                    }
                    break

                case 4:
                    _localctx = new PrintfStatementContext(_localctx)
                    this.enterOuterAlt(_localctx, 4)
                    {
                        this.state = 144
                        this.match(wlp3Parser.T__18)
                        this.state = 145
                        this.match(wlp3Parser.T__2)
                        this.state = 146
                        ;(_localctx as PrintfStatementContext)._body = this.expr(0)
                        this.state = 147
                        this.match(wlp3Parser.T__3)
                        this.state = 148
                        this.match(wlp3Parser.T__14)
                    }
                    break

                case 5:
                    _localctx = new DclStatementContext(_localctx)
                    this.enterOuterAlt(_localctx, 5)
                    {
                        this.state = 150
                        ;(_localctx as DclStatementContext)._d = this.dcl()
                        this.state = 151
                        this.match(wlp3Parser.T__14)
                    }
                    break

                case 6:
                    _localctx = new DclAssignmentContext(_localctx)
                    this.enterOuterAlt(_localctx, 6)
                    {
                        this.state = 153
                        ;(_localctx as DclAssignmentContext)._d = this.dcl()
                        this.state = 154
                        this.match(wlp3Parser.T__13)
                        this.state = 155
                        ;(_localctx as DclAssignmentContext)._val = this.expr(0)
                        this.state = 156
                        this.match(wlp3Parser.T__14)
                    }
                    break

                case 7:
                    _localctx = new ReturnStatementContext(_localctx)
                    this.enterOuterAlt(_localctx, 7)
                    {
                        this.state = 158
                        this.match(wlp3Parser.T__19)
                        this.state = 159
                        ;(_localctx as ReturnStatementContext)._val = this.expr(0)
                        this.state = 160
                        this.match(wlp3Parser.T__14)
                    }
                    break

                case 8:
                    _localctx = new FreeStatementContext(_localctx)
                    this.enterOuterAlt(_localctx, 8)
                    {
                        this.state = 162
                        this.match(wlp3Parser.T__20)
                        this.state = 163
                        this.match(wlp3Parser.T__2)
                        this.state = 164
                        ;(_localctx as FreeStatementContext)._val = this.expr(0)
                        this.state = 165
                        this.match(wlp3Parser.T__3)
                        this.state = 166
                        this.match(wlp3Parser.T__14)
                    }
                    break

                case 9:
                    _localctx = new ExprStatementContext(_localctx)
                    this.enterOuterAlt(_localctx, 9)
                    {
                        this.state = 168
                        ;(_localctx as ExprStatementContext)._val = this.expr(0)
                        this.state = 169
                        this.match(wlp3Parser.T__14)
                    }
                    break
            }
        } catch (re) {
            if (re instanceof RecognitionException) {
                _localctx.exception = re
                this._errHandler.reportError(this, re)
                this._errHandler.recover(this, re)
            } else {
                throw re
            }
        } finally {
            this.exitRule()
        }
        return _localctx
    }
    // @RuleVersion(0)
    public args(): ArgsContext {
        let _localctx: ArgsContext = new ArgsContext(this._ctx, this.state)
        this.enterRule(_localctx, 22, wlp3Parser.RULE_args)
        try {
            this.state = 175
            this._errHandler.sync(this)
            switch (this._input.LA(1)) {
                case wlp3Parser.T__2:
                case wlp3Parser.T__10:
                case wlp3Parser.T__11:
                case wlp3Parser.T__12:
                case wlp3Parser.T__33:
                case wlp3Parser.INT:
                case wlp3Parser.BOOL:
                case wlp3Parser.ID:
                    _localctx = new ArgsListContext(_localctx)
                    this.enterOuterAlt(_localctx, 1)
                    {
                        this.state = 173
                        ;(_localctx as ArgsListContext)._list = this.arglist()
                    }
                    break
                case wlp3Parser.T__3:
                    _localctx = new ArgsEmptyContext(_localctx)
                    this.enterOuterAlt(_localctx, 2)
                    // tslint:disable-next-line:no-empty
                    {
                    }
                    break
                default:
                    throw new NoViableAltException(this)
            }
        } catch (re) {
            if (re instanceof RecognitionException) {
                _localctx.exception = re
                this._errHandler.reportError(this, re)
                this._errHandler.recover(this, re)
            } else {
                throw re
            }
        } finally {
            this.exitRule()
        }
        return _localctx
    }
    // @RuleVersion(0)
    public arglist(): ArglistContext {
        let _localctx: ArglistContext = new ArglistContext(this._ctx, this.state)
        this.enterRule(_localctx, 24, wlp3Parser.RULE_arglist)
        try {
            this.state = 182
            this._errHandler.sync(this)
            switch (this.interpreter.adaptivePredict(this._input, 10, this._ctx)) {
                case 1:
                    _localctx = new SingleArgContext(_localctx)
                    this.enterOuterAlt(_localctx, 1)
                    {
                        this.state = 177
                        ;(_localctx as SingleArgContext)._first = this.expr(0)
                    }
                    break

                case 2:
                    _localctx = new MultiArgsContext(_localctx)
                    this.enterOuterAlt(_localctx, 2)
                    {
                        this.state = 178
                        ;(_localctx as MultiArgsContext)._first = this.expr(0)
                        this.state = 179
                        this.match(wlp3Parser.T__6)
                        this.state = 180
                        ;(_localctx as MultiArgsContext)._rest = this.arglist()
                    }
                    break
            }
        } catch (re) {
            if (re instanceof RecognitionException) {
                _localctx.exception = re
                this._errHandler.reportError(this, re)
                this._errHandler.recover(this, re)
            } else {
                throw re
            }
        } finally {
            this.exitRule()
        }
        return _localctx
    }
    // @RuleVersion(0)
    public binaryoperator(): BinaryoperatorContext {
        const _localctx: BinaryoperatorContext = new BinaryoperatorContext(this._ctx, this.state)
        this.enterRule(_localctx, 26, wlp3Parser.RULE_binaryoperator)
        let _la: number
        try {
            this.enterOuterAlt(_localctx, 1)
            {
                this.state = 184
                _la = this._input.LA(1)
                if (
                    !(
                        (_la & ~0x1f) === 0 &&
                        ((1 << _la) &
                            ((1 << wlp3Parser.T__11) |
                                (1 << wlp3Parser.T__21) |
                                (1 << wlp3Parser.T__22) |
                                (1 << wlp3Parser.T__23) |
                                (1 << wlp3Parser.T__24) |
                                (1 << wlp3Parser.T__25) |
                                (1 << wlp3Parser.T__26) |
                                (1 << wlp3Parser.T__27) |
                                (1 << wlp3Parser.T__28) |
                                (1 << wlp3Parser.T__29) |
                                (1 << wlp3Parser.T__30))) !==
                            0
                    )
                ) {
                    this._errHandler.recoverInline(this)
                } else {
                    if (this._input.LA(1) === Token.EOF) {
                        this.matchedEOF = true
                    }

                    this._errHandler.reportMatch(this)
                    this.consume()
                }
            }
        } catch (re) {
            if (re instanceof RecognitionException) {
                _localctx.exception = re
                this._errHandler.reportError(this, re)
                this._errHandler.recover(this, re)
            } else {
                throw re
            }
        } finally {
            this.exitRule()
        }
        return _localctx
    }
    // @RuleVersion(0)
    public binarylogical(): BinarylogicalContext {
        const _localctx: BinarylogicalContext = new BinarylogicalContext(this._ctx, this.state)
        this.enterRule(_localctx, 28, wlp3Parser.RULE_binarylogical)
        let _la: number
        try {
            this.enterOuterAlt(_localctx, 1)
            {
                this.state = 186
                _la = this._input.LA(1)
                if (!(_la === wlp3Parser.T__31 || _la === wlp3Parser.T__32)) {
                    this._errHandler.recoverInline(this)
                } else {
                    if (this._input.LA(1) === Token.EOF) {
                        this.matchedEOF = true
                    }
